--- a/dashboard/dashboard/src/index.css
+++ b/dashboard/dashboard/src/index.css
@@ -11,3 +11,95 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#acc_frame {
+  position : absolute;
+  top      : 0;
+  right    : 0;
+  height   : 50%;
+  width    : 80%;
+}
+#loss_frame {
+  position : absolute;
+  bottom   : 0;
+  right    : 0;
+  height   : 50%;
+  width    : 80%;
+}
+ul li {
+  background: #cce5ff;
+  margin: 5px;
+  list-style-position: inside;
+}
+ul[title]::before {
+  content: attr(title);
+  display: block;
+  font-weight: bold;
+  padding: 4px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+input[type=text], select, textarea#new_layer_details {
+  width: 100%; 
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+  font-weight: bold;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+button:hover {
+  background-color: #45a049;
+}
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  /* float: right; */
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #cce5ff;
+  padding: 20px;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
